--- a/UI/JobSchedulerDemo.HangfireDashboard/JobSchedulerDemo.HangfireDashboard.csproj
+++ b/UI/JobSchedulerDemo.HangfireDashboard/JobSchedulerDemo.HangfireDashboard.csproj
@@ -14,5 +14,9 @@
 		<PackageReference Include="Hangfire" Version="1.8.0-beta4" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Core\JobSchedulerDemo.Application\JobSchedulerDemo.Application.csproj" />
+	</ItemGroup>
 	
 </Project>
