--- a/UI/JobSchedulerDemo.ClientUI/Server/appsettings.json
+++ b/UI/JobSchedulerDemo.ClientUI/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "JobsDbConnectionString": "Server=hangfiredb;Database=JobsDb;Integrated Security=False;User ID=sa;Password=abc1234_Q;MultipleActiveResultSets=True"
+  },
   "RabbitMQHost": "rabbitmq",
   "Logging": {
     "LogLevel": {
