--- a/Core/JobSchedulerDemo.Application/JobSchedulerDemo.Application.csproj
+++ b/Core/JobSchedulerDemo.Application/JobSchedulerDemo.Application.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Hangfire.Core" Version="1.7.28" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+	<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.4" />
+	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JobSchedulerDemo.Domain\JobSchedulerDemo.Domain.csproj" />
   </ItemGroup>
 
 </Project>
