Changed job scheduling to use mediatr

--- a/UI/JobSchedulerDemo.JobService/JobSchedulerDemo.JobService.csproj
+++ b/UI/JobSchedulerDemo.JobService/JobSchedulerDemo.JobService.csproj
@@ -16,5 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\JobSchedulerDemo.Infrastructure\JobSchedulerDemo.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\JobSchedulerDemo.Persistence\JobSchedulerDemo.Persistence.csproj" />
   </ItemGroup>
 </Project>
