--- a/UI/JobSchedulerDemo.JobService/appsettings.json
+++ b/UI/JobSchedulerDemo.JobService/appsettings.json
@@ -1,7 +1,8 @@
 {
   "RabbitMQHost": "rabbitmq",
   "ConnectionStrings": {
-    "HangfireDB": "Data Source=hangfiredb;Initial Catalog={0};Integrated Security=False;User ID=sa;Password=abc1234_Q;Pooling=False"
+    "HangfireDB": "Data Source=hangfiredb;Initial Catalog={0};Integrated Security=False;User ID=sa;Password=abc1234_Q;Pooling=False",
+    "JobsDbConnectionString": "Server=hangfiredb;Database=JobsDb;Integrated Security=False;User ID=sa;Password=abc1234_Q;MultipleActiveResultSets=True"
   },
   "HangfireDatabaseName": "hangfire-webapi-db",
   "PushMessageUrl": "http://jobschedulerdemo.signalrhub/",
