--- a/Core/JobSchedulerDemo.Application/JobSchedulerDemo.Application.csproj
+++ b/Core/JobSchedulerDemo.Application/JobSchedulerDemo.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 	<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.4" />
 	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
