--- a/Infrastructure/JobSchedulerDemo.Persistence/JobSchedulerDemo.Persistence.csproj
+++ b/Infrastructure/JobSchedulerDemo.Persistence/JobSchedulerDemo.Persistence.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Coravel.Pro" Version="4.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
