--- a/UI/JobSchedulerDemo.ClientUI/Server/JobSchedulerDemo.ClientUI.Server.csproj
+++ b/UI/JobSchedulerDemo.ClientUI/Server/JobSchedulerDemo.ClientUI.Server.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Coravel.Pro" Version="4.0.2" />
 	<PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
@@ -24,6 +25,7 @@
     <ProjectReference Include="..\..\..\Core\JobSchedulerDemo.Application\JobSchedulerDemo.Application.csproj" />
     <ProjectReference Include="..\..\..\Infrastructure\JobSchedulerDemo.Infrastructure\JobSchedulerDemo.Infrastructure.csproj" />
     <ProjectReference Include="..\..\..\Infrastructure\JobSchedulerDemo.Persistence\JobSchedulerDemo.Persistence.csproj" />
+    <ProjectReference Include="..\..\..\Infrastructure\JobSchedulerDemo.Scheduler.Coravel\JobSchedulerDemo.Scheduler.Coravel.csproj" />
     <ProjectReference Include="..\Client\JobSchedulerDemo.ClientUI.Client.csproj" />
     <ProjectReference Include="..\Shared\JobSchedulerDemo.ClientUI.Shared.csproj" />
   </ItemGroup>
