--- a/UI/JobSchedulerDemo.JobService/appsettings.json
+++ b/UI/JobSchedulerDemo.JobService/appsettings.json
@@ -6,6 +6,9 @@
   },
   "HangfireDatabaseName": "hangfire-webapi-db",
   "PushMessageUrl": "http://jobschedulerdemo.signalrhub/",
+  "Quartz": {
+    "quartz.scheduler.instanceName": "Quartz Scheduler"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
