--- a/Infrastructure/JobSchedulerDemo.Scheduler.Quartz/JobSchedulerDemo.Scheduler.Quartz.csproj
+++ b/Infrastructure/JobSchedulerDemo.Scheduler.Quartz/JobSchedulerDemo.Scheduler.Quartz.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Quartz" Version="3.4.0" />
     <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.4.0" />
