Added cancel job to Quartz and Hangfire

--- a/UI/JobSchedulerDemo.ClientUI/Server/appsettings.json
+++ b/UI/JobSchedulerDemo.ClientUI/Server/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "JobsDbConnectionString": "Server=hangfiredb;Database=JobsDb;Integrated Security=False;User ID=sa;Password=abc1234_Q;MultipleActiveResultSets=True"
   },
+  "QuartzSchedulerName": "JobScheduler",
   "PushMessageUrl": "http://jobschedulerdemo.signalrhub/",
   "RabbitMQHost": "rabbitmq",
   "Logging": {
