--- a/UI/JobSchedulerDemo.JobService/appsettings.json
+++ b/UI/JobSchedulerDemo.JobService/appsettings.json
@@ -5,6 +5,7 @@
     "JobsDbConnectionString": "Server=hangfiredb;Database=JobsDb;Integrated Security=False;User ID=sa;Password=abc1234_Q;MultipleActiveResultSets=True"
   },
   "HangfireDatabaseName": "hangfire-webapi-db",
+  "QuartzSchedulerName": "JobScheduler",
   "PushMessageUrl": "http://jobschedulerdemo.signalrhub/",
   "Quartz": {
     "quartz.scheduler.instanceName": "Quartz Scheduler"
