Added Azure service bus with masstransit

--- a/UI/JobSchedulerDemo.ClientUI/Server/appsettings.json
+++ b/UI/JobSchedulerDemo.ClientUI/Server/appsettings.json
@@ -5,6 +5,7 @@
   "QuartzSchedulerName": "JobScheduler",
   "PushMessageUrl": "http://jobschedulerdemo.signalrhub/",
   "RabbitMQHost": "rabbitmq",
+  "AzureServiceBus": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
