--- a/UI/JobSchedulerDemo.JobService/appsettings.json
+++ b/UI/JobSchedulerDemo.JobService/appsettings.json
@@ -1,5 +1,6 @@
 {
   "RabbitMQHost": "rabbitmq",
+  "AzureServiceBus": "",
   "ConnectionStrings": {
     "HangfireDB": "Data Source=hangfiredb;Initial Catalog={0};Integrated Security=False;User ID=sa;Password=abc1234_Q;Pooling=False",
     "JobsDbConnectionString": "Server=hangfiredb;Database=JobsDb;Integrated Security=False;User ID=sa;Password=abc1234_Q;MultipleActiveResultSets=True"
