--- a/Infrastructure/JobSchedulerDemo.Infrastructure/JobSchedulerDemo.Infrastructure.csproj
+++ b/Infrastructure/JobSchedulerDemo.Infrastructure/JobSchedulerDemo.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="7.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
